[gd_scene load_steps=29 format=3 uid="uid://cm1ln8my7l3ir"]

[ext_resource type="Texture2D" uid="uid://f8p8q0nqnfus" path="res://enemies/dog/dog_sprites.png" id="1_10tye"]
[ext_resource type="Script" path="res://classes/StateMachine.gd" id="1_54cbj"]
[ext_resource type="Script" path="res://enemies/dog/boss_dog.gd" id="1_s4ilk"]
[ext_resource type="Script" path="res://classes/State.gd" id="2_cc41d"]
[ext_resource type="Texture2D" uid="uid://b2p8w4atcelky" path="res://temp-char.png" id="3_yertr"]
[ext_resource type="AudioStream" uid="uid://df2nr2t2qrigk" path="res://audio/wakeup_bark.wav" id="6_ndyi4"]
[ext_resource type="AudioStream" uid="uid://chf1j03fwi3cm" path="res://audio/dog_growl.wav" id="7_wojby"]
[ext_resource type="AudioStream" uid="uid://dfigp3qik2qty" path="res://audio/dog_hurt.wav" id="8_fmvbx"]
[ext_resource type="AudioStream" uid="uid://doxgan7m0elug" path="res://audio/dog_breathing.wav" id="9_iu744"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53nbb"]
atlas = ExtResource("1_10tye")
region = Rect2(0, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8qy4"]
atlas = ExtResource("1_10tye")
region = Rect2(96, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f5pk"]
atlas = ExtResource("1_10tye")
region = Rect2(192, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pah5i"]
atlas = ExtResource("1_10tye")
region = Rect2(0, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im22y"]
atlas = ExtResource("1_10tye")
region = Rect2(0, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b5iq"]
atlas = ExtResource("1_10tye")
region = Rect2(96, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic6pl"]
atlas = ExtResource("1_10tye")
region = Rect2(192, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqxji"]
atlas = ExtResource("3_yertr")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhpgx"]
atlas = ExtResource("1_10tye")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv2yo"]
atlas = ExtResource("1_10tye")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_un18b"]
atlas = ExtResource("1_10tye")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uawk"]
atlas = ExtResource("1_10tye")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xehww"]
atlas = ExtResource("1_10tye")
region = Rect2(96, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd8mr"]
atlas = ExtResource("1_10tye")
region = Rect2(192, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n774"]
atlas = ExtResource("1_10tye")
region = Rect2(0, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntu4"]
atlas = ExtResource("1_10tye")
region = Rect2(96, 256, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q2evs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53nbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8qy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f5pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pah5i")
}],
"loop": true,
"name": &"charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_im22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b5iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic6pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b5iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic6pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b5iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic6pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b5iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic6pl")
}],
"loop": false,
"name": &"dazed",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqxji")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhpgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv2yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un18b")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uawk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xehww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd8mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uawk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xehww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd8mr")
}],
"loop": false,
"name": &"pre-charging",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n774")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntu4")
}],
"loop": true,
"name": &"sleeping",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ueex3"]
size = Vector2(65, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs8ec"]
size = Vector2(65, 10)

[node name="boss_dog" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_s4ilk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q2evs")
animation = &"pre-charging"
autoplay = "sleeping"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 8.5)
shape = SubResource("RectangleShape2D_ueex3")

[node name="close_ray" type="RayCast2D" parent="."]
target_position = Vector2(64, 0)

[node name="far_ray" type="RayCast2D" parent="."]
modulate = Color(0.850283, 0.791249, 0.107921, 1)
target_position = Vector2(128, 14)

[node name="ass_ray" type="RayCast2D" parent="."]
modulate = Color(1, 0.67451, 0.0941176, 1)
target_position = Vector2(-128, 8)

[node name="daze_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="top_dog" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_dog"]
position = Vector2(0.5, -17)
shape = SubResource("RectangleShape2D_qs8ec")
debug_color = Color(0, 0.627451, 0, 0.419608)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_54cbj")

[node name="sleeping" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="moving" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="pre-charging" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="charging" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="dazed" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="dead" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="seeking" type="Node" parent="StateMachine"]
script = ExtResource("2_cc41d")

[node name="wakeup-bark" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ndyi4")

[node name="chargebuildup-growl" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wojby")

[node name="dazed-wimper" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_fmvbx")

[node name="walk-breathing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_iu744")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="daze_timer" to="." method="_on_daze_timer_timeout"]
[connection signal="body_entered" from="top_dog" to="." method="_on_area_2d_body_entered"]
[connection signal="state_entered" from="StateMachine/moving" to="." method="_on_moving_state_entered"]
[connection signal="state_entered" from="StateMachine/pre-charging" to="." method="_on_precharging_state_entered"]
[connection signal="state_entered" from="StateMachine/charging" to="." method="_on_charging_state_entered"]
[connection signal="state_entered" from="StateMachine/dazed" to="." method="_on_dazed_state_entered"]
[connection signal="state_entered" from="StateMachine/dead" to="." method="_on_dead_state_entered"]
[connection signal="state_entered" from="StateMachine/seeking" to="." method="_on_seeking_state_entered"]
